--- a/public/css/components/footer.css
+++ b/public/css/components/footer.css
@@ -1,6 +1,6 @@
 footer {
     border: 1px 0px 0px 0px solid;
     padding: 10px;
-    box-shadow: 0px -10px 10px grey;
+    box-shadow: 0px -10px 10px rgb(236, 236, 236);
     margin-top: 20px;
 }
